--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,12 @@
     "name": "Free School",
     "version": "1.0",
     "description": "Go to school by just searching the internet",
-    "permissions": ["activeTab", "declarativeContent", "storage"],
+    "permissions": [
+        "tabs",
+        "activeTab", 
+        "declarativeContent", 
+        "storage"
+      ],
     "background": {
       	"scripts": ["background.js"],
       	"persistent": false
