--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Free School",
+    "name": "nytkollegium",
     "version": "1.0",
     "description": "Go to school by just searching the internet",
     "permissions": [
